2013-05-26  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/mach/hurd/dl-sysdep.c (_dl_sysdep_start:go): Don't
	declare _dl_skip_args.

	* sysdeps/mach/hurd/i386/init-first.c (_dl_non_dynamic_init):
	Don't declare.

	* manual/platform.texi: Add missing @end deftypefun.

2013-05-24  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15529]
	* sysdeps/ieee754/ldbl-96/e_hypotl.c (__ieee754_hypotl): Set high
	bit of mantissa of 2^16382.
	* math/libm-test.inc (hypot_test_data): Add more tests.

	* math/libm-test.inc: Add drem and pow10 to list of tested
	functions.
	(pow10_test): New function.
	(drem_test): Likewise.
	(drem_test_tonearest): Likewise.
	(drem_test_towardzero): Likewise.
	(drem_test_downward): Likewise.
	(drem_test_upward): Likewise.
	(main): Call the new functions.

	* math/libm-test.inc (finite_test_data): Remove.
	(finite_test): Run tests from isfinite_test_data.
	(gamma_test_data): Remove.
	(gamma_test): Run tests from lgamma_test_data.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-05-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* manual/platform.texi: Add PowerPC PPR function set documentation.
	* sysdeps/powerpc/sys/platform/ppc.h: Add PowerPC PPR set function
	implementation.

2013-05-24  Carlos O'Donell  <carlos@redhat.com>

	* math/libm-test.inc (MAX_EXP): Define.
	(ULPDIFF): Define.
	(ulp): New function.
	(check_float_internal): Use ULPDIFF.
	(cpow_test): Disable failing test.
	(check_ulp): Test ulp() implemetnation.
	(main): Call check_ulp before starting tests.

2013-05-24  Joseph Myers  <joseph@codesourcery.com>

	* math/gen-libm-test.pl (generate_testfile): Do not handle
	START_DATA and END_DATA.
	* math/libm-test.inc (acos_test_data): Do not use START_DATA and
	END_DATA.
	(acos_tonearest_test_data): Likewise.
	(acos_towardzero_test_data): Likewise.
	(acos_downward_test_data): Likewise.
	(acos_upward_test_data): Likewise.
	(acosh_test_data): Likewise.