@@ -28,8 +28,9 @@ main (void)
   char s[] = "+.e";
 
   f = fmemopen (s, strlen (s), "r");
-  /* This should fail to parse a float and leave 'e' in the input.  */
-  lost |= (fscanf (f, "%f", &d) != 0);
+  /* This should fail to parse a floating-point number, and leave 'e' in the
+     input.  */
+  lost |= (fscanf (f, "%lf", &d) != 0);
   c = fgetc (f);
   lost |= c != 'e';
   puts (lost ? "Test FAILED!" : "Test succeeded.");
